--- a/MyFirstPhoneGap/MyFirstPhoneGap.csproj
+++ b/MyFirstPhoneGap/MyFirstPhoneGap.csproj
@@ -61,7 +61,7 @@
     <Content Include="CSS\Main.css" />
     <Content Include="IMG\icon.png" />
     <Content Include="IMG\splash.png" />
-    <Content Include="PhoneGapAPP.html" />
+    <Content Include="index.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
