--- a/MyFirstPhoneGap/MyFirstPhoneGap.csproj
+++ b/MyFirstPhoneGap/MyFirstPhoneGap.csproj
@@ -58,10 +58,15 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="config.xml" />
+    <Content Include="CSS\jquery.mobile-1.4.2.css" />
     <Content Include="CSS\Main.css" />
     <Content Include="IMG\icon.png" />
     <Content Include="IMG\splash.png" />
     <Content Include="index.html" />
+    <Content Include="JS\jquery-2.1.0.js" />
+    <Content Include="JS\jquery.mobile-1.4.2.js" />
+    <Content Include="JS\MyIST.js" />
+    <Content Include="test.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -75,9 +80,7 @@
       <DependentUpon>Web.config</DependentUpon>
     </None>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="JS\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
